[package]
name = "tls_min"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.3", features = ["http1", "http2", "ws", "tower-log", "headers"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
rustls-pemfile = "0.2.1"
tokio-rustls = "0.23"
async-stream = "0.3"